--- a/spec/system/constructRenderState.spec.yaml
+++ b/spec/system/constructRenderState.spec.yaml
@@ -28,7 +28,7 @@ out:
           children:
             - type: "container"
               id: "screen-container"
-  transitions: []
+  animations: []
 ---
 case: construct render state with multiple actions in one presentation
 in:
@@ -68,7 +68,7 @@ out:
           src: "background.jpg"
           width: 1920
           height: 1080
-  transitions: []
+  animations: []
 ---
 case: construct render state with clean all and multiple presentations
 in:
@@ -123,4 +123,4 @@ out:
           src: "new-background.jpg"
           width: 1920
           height: 1080
-  transitions: []
+  animations: []
