--- a/spec/system/renderState/addChoices.spec.yaml
+++ b/spec/system/renderState/addChoices.spec.yaml
@@ -13,7 +13,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "choiceLayout"
@@ -39,7 +39,7 @@ out:
         - type: "button"
           id: "choice-button"
           text: "Select an option"
-  transitions: []
+  animations: []
 ---
 case: multiple choice layout elements
 in:
@@ -49,7 +49,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "multiChoiceLayout"
@@ -87,7 +87,7 @@ out:
             - type: "button"
               id: "choice-2"
               text: "Option 2"
-  transitions: []
+  animations: []
 ---
 case: no presentationState.choice - return unchanged state
 in:
@@ -97,7 +97,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState: {}
     resources:
       layouts:
@@ -112,7 +112,7 @@ out:
       x: 0
       y: 0
       children: []
-  transitions: []
+  animations: []
 ---
 case: story container does not exist - return unchanged state
 in:
@@ -120,7 +120,7 @@ in:
       - id: "notStory"
         type: "container"
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "choiceLayout"
@@ -138,7 +138,7 @@ out:
     - id: "notStory"
       type: "container"
       children: []
-  transitions: []
+  animations: []
 ---
 case: layout not found - return unchanged state
 in:
@@ -148,7 +148,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "nonExistent"
@@ -168,7 +168,7 @@ out:
       x: 0
       y: 0
       children: []
-  transitions: []
+  animations: []
 ---
 case: layout has no elements - return unchanged state
 in:
@@ -178,7 +178,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "emptyLayout"
@@ -196,7 +196,7 @@ out:
       x: 0
       y: 0
       children: []
-  transitions: []
+  animations: []
 ---
 case: no choice items - still add layout elements
 in:
@@ -206,7 +206,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "staticLayout"
@@ -226,7 +226,7 @@ out:
       children:
         - type: "text"
           content: "No choices available"
-  transitions: []
+  animations: []
 ---
 case: null resources - return unchanged state
 in:
@@ -236,7 +236,7 @@ in:
         x: 0
         y: 0
         children: []
-    transitions: []
+    animations: []
   - presentationState:
       choice:
         layoutId: "choiceLayout"
@@ -251,4 +251,4 @@ out:
       x: 0
       y: 0
       children: []
-  transitions: []
+  animations: []
