--- a/vt/specs/visual/transform.yaml
+++ b/vt/specs/visual/transform.yaml
@@ -19,11 +19,15 @@ resources:
             actionPayload:
               actions:
                 nextLine: {}
-  visuals:
+  images:
     alkejf3la:
-      fileId: la3lka
+      fileId: x342fga
+      width: 100
+      height: 100
     8a3lkja:
       fileId: a32kf3
+      width: 150
+      height: 150
   transforms:
     iasdlf:
       x: 500
@@ -49,7 +53,6 @@ story:
                   items:
                     - id: visual-1
                       resourceId: alkejf3la
-                      resourceType: visual
                       transformId: iasdlf
             - id: line2
               actions:
@@ -57,9 +60,7 @@ story:
                   items:
                     - id: visual-1
                       resourceId: alkejf3la
-                      resourceType: visual
                       transformId: iasdlf
                     - id: visual-2
                       resourceId: 8a3lkja
-                      resourceType: visual
                       transformId: a32kf3
