--- a/vt/specs/character/animation-2.yaml
+++ b/vt/specs/character/animation-2.yaml
@@ -29,6 +29,22 @@ resources:
       fileId: dmni32
       width: 1920
       height: 1080
+    fk4jla893:
+      fileId: la3lka
+      width: 200
+      height: 200
+    3fjaklj34:
+      fileId: x342fga
+      width: 200
+      height: 200
+    spr1:
+      fileId: file1
+      width: 200
+      height: 200
+    spr2:
+      fileId: file2
+      width: 200
+      height: 200
 
   characters:
     alkjf3ia:
@@ -140,9 +156,9 @@ story:
                       transformId: iasdlf
                       sprites:
                         - id: base
-                          imageId: fk4jla893
+                          resourceId: fk4jla893
                         - id: outfit
-                          imageId: 3fjaklj34
+                          resourceId: 3fjaklj34
                       animations:
                         in:
                           animationId: slide_in_left
@@ -157,16 +173,16 @@ story:
                       transformId: iasdlf
                       sprites:
                         - id: base
-                          imageId: fk4jla893
+                          resourceId: fk4jla893
                         - id: outfit
-                          imageId: 3fjaklj34
+                          resourceId: 3fjaklj34
                     - id: "char2id"
                       transformId: t_right
                       sprites:
                         - id: base
-                          imageId: spr1
+                          resourceId: spr1
                         - id: outfit
-                          imageId: spr2
+                          resourceId: spr2
                       animations:
                         in:
                           animationId: slide_in_right
@@ -181,9 +197,9 @@ story:
                       transformId: iasdlf
                       sprites:
                         - id: base
-                          imageId: fk4jla893
+                          resourceId: fk4jla893
                         - id: outfit
-                          imageId: 3fjaklj34
+                          resourceId: 3fjaklj34
                       animations:
                         out:
                           animationId: slide_out_left
@@ -191,9 +207,9 @@ story:
                       transformId: a32kf3
                       sprites:
                         - id: base
-                          imageId: fk4jla893
+                          resourceId: fk4jla893
                         - id: outfit
-                          imageId: 3fjaklj34
+                          resourceId: 3fjaklj34
                       animations:
                         in:
                           animationId: slide_in_left
@@ -208,9 +224,9 @@ story:
                       transformId: t_right
                       sprites:
                         - id: base
-                          imageId: spr1
+                          resourceId: spr1
                         - id: outfit
-                          imageId: spr2
+                          resourceId: spr2
                       animations:
                         out:
                           animationId: slide_out_right
@@ -218,6 +234,6 @@ story:
                       transformId: a32kf3
                       sprites:
                         - id: base
-                          imageId: fk4jla893
+                          resourceId: fk4jla893
                         - id: outfit
-                          imageId: 3fjaklj34
+                          resourceId: 3fjaklj34
