--- a/spec/system/renderState/addDialogue.spec.yaml
+++ b/spec/system/renderState/addDialogue.spec.yaml
@@ -16,7 +16,8 @@ in:
     animations: []
   - presentationState:
       dialogue:
-        layoutId: "dialogueLayout"
+        gui:
+          resourceId: "dialogueLayout"
         content: ["Hello world"]
     resources:
       layouts:
